bug delete overflow in reset.css et add on style.css overflow /  add overflow on body and offcanvas-body for good effect

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -7,7 +7,6 @@
         text-decoration: none;
         font-family: "roboto",Arial, Helvetica, sans-serif;
         scroll-behavior: smooth;
-        overflow-y: hidden;
     }
 
     abbr {
